# circt

./: lld_patch.diff  llvm_cache.cmake  pyproject.toml
.github/actions/setup_base/: action.yml
.github/workflows/: buildAndTestWindows.yml  build_wheel.yml
include/circt/Dialect/FIRRTL/: Passes.td
include/circt/Dialect/Verif/: VerifOps.td
include/circt/Scheduling/: Algorithms.h
lib/Bindings/Python/: CIRCTModule.cpp  CMakeLists.txt
lib/Conversion/ExportVerilog/: ExportVerilog.cpp  LegalizeNames.cpp  PrepareForEmission.cpp
lib/Conversion/FIRRTLToHW/: LowerToHW.cpp
lib/Conversion/VerifToSV/: VerifToSV.cpp
lib/Dialect/FIRRTL/: FIRRTLDialect.cpp
lib/Dialect/FIRRTL/Transforms/: GrandCentral.cpp  GrandCentralTaps.cpp  IMConstProp.cpp  LowerTypes.cpp  MergeConnections.cpp
lib/Dialect/SV/Transforms/: PrettifyVerilog.cpp
lib/Scheduling/: TestPasses.cpp
test/Conversion/ExportVerilog/: sv-dialect.mlir
test/Dialect/FIRRTL/: grand-central-taps.mlir  imconstprop.mlir
test/Dialect/SV/: hw-cleanup.mlir
tools/circt-reduce/: Reduction.cpp
tools/firtool/: firtool.cpp
